--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Vyduikin <i.vyduikin@mkskom.ru>",
   "license": "MIT",
   "dependencies": {
+    "netology_guess_number": "^1.0.0",
     "yargs": "^17.5.1"
   }
 }
