--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "repository": "https://github.com/Vangiks/netology_nodejs.git",
   "author": "Vyduikin <i.vyduikin@mkskom.ru>",
   "license": "MIT",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "start": "pm2 start main.js",
     "dev": "nodemon main.js"
   },
   "dependencies": {
+    "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "multer": "^1.4.5-lts.1",
@@ -18,7 +19,6 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "dotenv": "^16.0.1",
     "pm2": "^5.2.0"
   }
 }
