build: Получить library из образа версии 1.0.2

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -41,7 +41,7 @@ services:
       - storage
 
   library:
-    build: .
+    image: vangiks/library:1.0.2
     ports:
       - '3000:3000'
     environment:
