--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "mongoose": "^6.5.2",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "2",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "pm2": "^5.2.0"
