--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "node-fetch": "2",
     "nodemon": "^2.0.19",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "socket.io": "^4.5.1"
   },
   "devDependencies": {
     "pm2": "^5.2.0"
